crates/wdl-grammar/tests/parsing/empty-map-type/source.wdl
# This is a test of parsing an empty map type

version 1.1

struct Foo {
    Map[] a
}
